[project]
authors = [{ name = "Geoff Boeing", email = "boeing@usc.edu" }]
dependencies = [  # pin to minor versions pre-installed on Colab
    "jupyterlab",
    "numpy<2",
    "osmnx[all]==2.1.*",
    "pandana==0.7.*",
]
description = "OSMnx Workshop"
license = "MIT"
license-files = ["LICENSE"]
name = "OSMnx Workshop"
readme = "README.md"
requires-python = "==3.*"
version = "2026"

[dependency-groups]
dev = ["nbdime", "pre-commit"]

[tool.ruff]
cache-dir = "~/.cache/pre-commit/ruff"
line-length = 100

[tool.ruff.lint]
extend-select = ["A", "B", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# allow intentional errors in bootcamp lecture
"modules/03-coding-refresher/lecture-1.ipynb" = ["B018", "F821"]

[tool.ruff.lint.pycodestyle]
max-line-length = 110 # line length + 10% since it isn't a hard upper bound
